# homework2

./: .gitignore  CMakeLists.txt  assignment.cpp  assignment.h  logins.txt  main.cpp  main.h  student.cpp  student.h
homework2_reset/: assignment.cpp  assignment.h  assignments.txt  gnums.txt  logins.txt  main  main.cpp  main.h  names.txt  student.cpp  student.h
java/myTest/: Assignment.java  Users.java  logins.txt  main.java  student.java
